apps/temporal/extras/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-ui
  namespace: plotlens-marketing
  labels:
    app: temporal
    app.kubernetes.io/part-of: plotlens-marketing
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`temporal.corbello.io`)
      kind: Rule
      services:
        - name: temporal-web
          port: 8080
